Finish prio fees

--- a/package.json
+++ b/package.json
@@ -40,33 +40,33 @@
     "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "^0.6.12-next.4+260113a2",
-    "@helium/account-fetch-cache-hooks": "^0.6.12-next.4+260113a2",
+    "@helium/account-fetch-cache": "^0.6.12-next.7+ff306449",
+    "@helium/account-fetch-cache-hooks": "^0.6.12-next.7+ff306449",
     "@helium/address": "4.10.2",
-    "@helium/circuit-breaker-sdk": "^0.6.12-next.4+260113a2",
+    "@helium/circuit-breaker-sdk": "^0.6.12-next.7+ff306449",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency-utils": "^0.6.12-next.4+260113a2",
-    "@helium/data-credits-sdk": "^0.6.12-next.4+260113a2",
-    "@helium/distributor-oracle": "^0.6.12-next.4+260113a2",
-    "@helium/fanout-sdk": "^0.6.12-next.4+260113a2",
-    "@helium/helium-entity-manager-sdk": "^0.6.12-next.4+260113a2",
-    "@helium/helium-react-hooks": "^0.6.12-next.4+260113a2",
-    "@helium/helium-sub-daos-sdk": "^0.6.12-next.4+260113a2",
+    "@helium/currency-utils": "^0.6.12-next.7+ff306449",
+    "@helium/data-credits-sdk": "^0.6.12-next.7+ff306449",
+    "@helium/distributor-oracle": "^0.6.12-next.7+ff306449",
+    "@helium/fanout-sdk": "^0.6.12-next.7+ff306449",
+    "@helium/helium-entity-manager-sdk": "^0.6.12-next.7+ff306449",
+    "@helium/helium-react-hooks": "^0.6.12-next.7+ff306449",
+    "@helium/helium-sub-daos-sdk": "^0.6.12-next.7+ff306449",
     "@helium/http": "4.7.5",
-    "@helium/idls": "^0.6.12-next.4+260113a2",
-    "@helium/lazy-distributor-sdk": "^0.6.12-next.4+260113a2",
+    "@helium/idls": "^0.6.12-next.7+ff306449",
+    "@helium/lazy-distributor-sdk": "^0.6.12-next.7+ff306449",
     "@helium/modular-governance-hooks": "^0.0.8",
     "@helium/modular-governance-idls": "^0.0.8-next",
     "@helium/onboarding": "4.11.0",
     "@helium/organization-sdk": "^0.0.8",
     "@helium/proto-ble": "4.0.0",
-    "@helium/react-native-sdk": "file:.yalc/@helium/react-native-sdk",
-    "@helium/spl-utils": "file:.yalc/@helium/spl-utils",
+    "@helium/react-native-sdk": "^3.0.4",
+    "@helium/spl-utils": "^0.6.12-next.7+ff306449",
     "@helium/state-controller-sdk": "^0.0.8",
     "@helium/transactions": "4.8.1",
-    "@helium/treasury-management-sdk": "^0.6.12-next.4+260113a2",
-    "@helium/voter-stake-registry-hooks": "file:.yalc/@helium/voter-stake-registry-hooks",
-    "@helium/voter-stake-registry-sdk": "file:.yalc/@helium/voter-stake-registry-sdk",
+    "@helium/treasury-management-sdk": "^0.6.12-next.7+ff306449",
+    "@helium/voter-stake-registry-hooks": "^0.6.12-next.7+ff306449",
+    "@helium/voter-stake-registry-sdk": "^0.6.12-next.7+ff306449",
     "@helium/wallet-link": "4.11.0",
     "@jup-ag/api": "^6.0.6",
     "@ledgerhq/hw-app-solana": "7.0.13",
@@ -270,10 +270,10 @@
   },
   "resolutions": {
     "@types/react": "17",
-    "@helium/account-fetch-cache": "^0.6.12-next.4+260113a2",
-    "@helium/account-fetch-cache-hooks": "^0.6.12-next.4+260113a2",
-    "@helium/helium-react-hooks": "^0.6.12-next.4+260113a2",
-    "@helium/voter-stake-registry-hooks": "^0.6.12-next.4+260113a2",
+    "@helium/account-fetch-cache": "^0.6.12-next.7+ff306449",
+    "@helium/account-fetch-cache-hooks": "^0.6.12-next.7+ff306449",
+    "@helium/helium-react-hooks": "^0.6.12-next.7+ff306449",
+    "@helium/voter-stake-registry-hooks": "^0.6.12-next.7+ff306449",
     "@helium/modular-governance-hooks": "^0.0.8",
     "@helium/onboarding": "4.11.0"
   },
