--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "helium-wallet",
-  "version": "2.5.7",
+  "version": "2.5.8",
   "private": true,
   "scripts": {
     "postinstall": "patch-package && ./node_modules/.bin/rn-nodeify --hack --install && npx jetify",
@@ -35,28 +35,28 @@
     "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "^0.6.12-NEXT.3+4E9F6FB4",
-    "@helium/account-fetch-cache-hooks": "^0.6.12-NEXT.3+4E9F6FB4",
+    "@helium/account-fetch-cache": "^0.6.12",
+    "@helium/account-fetch-cache-hooks": "^0.6.12",
     "@helium/address": "4.10.2",
-    "@helium/circuit-breaker-sdk": "^0.6.12-NEXT.3+4E9F6FB4",
+    "@helium/circuit-breaker-sdk": "^0.6.12",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency-utils": "^0.6.6",
-    "@helium/data-credits-sdk": "^0.6.12-NEXT.3+4E9F6FB4",
-    "@helium/distributor-oracle": "^0.6.12-NEXT.3+4E9F6FB4",
-    "@helium/fanout-sdk": "^0.6.12-NEXT.3+4E9F6FB4",
-    "@helium/helium-entity-manager-sdk": "^0.6.12-NEXT.3+4E9F6FB4",
-    "@helium/helium-react-hooks": "^0.6.12-NEXT.3+4E9F6FB4",
-    "@helium/helium-sub-daos-sdk": "^0.6.12-NEXT.3+4E9F6FB4",
+    "@helium/data-credits-sdk": "^0.6.12",
+    "@helium/distributor-oracle": "^0.6.12",
+    "@helium/fanout-sdk": "^0.6.12",
+    "@helium/helium-entity-manager-sdk": "^0.6.12",
+    "@helium/helium-react-hooks": "^0.6.12",
+    "@helium/helium-sub-daos-sdk": "^0.6.12",
     "@helium/http": "4.7.5",
-    "@helium/idls": "^0.6.12-NEXT.3+4E9F6FB4",
-    "@helium/lazy-distributor-sdk": "^0.6.12-NEXT.3+4E9F6FB4",
+    "@helium/idls": "^0.6.12",
+    "@helium/lazy-distributor-sdk": "^0.6.12",
     "@helium/onboarding": "4.11.0",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "^3.0.4",
-    "@helium/spl-utils": "^0.6.12-NEXT.3+4E9F6FB4",
+    "@helium/spl-utils": "^0.6.12",
     "@helium/transactions": "4.8.1",
-    "@helium/treasury-management-sdk": "^0.6.12-NEXT.3+4E9F6FB4",
-    "@helium/voter-stake-registry-sdk": "^0.6.12-NEXT.3+4E9F6FB4",
+    "@helium/treasury-management-sdk": "^0.6.12",
+    "@helium/voter-stake-registry-sdk": "^0.6.12",
     "@helium/wallet-link": "4.11.0",
     "@jup-ag/api": "^6.0.6",
     "@ledgerhq/hw-app-solana": "7.0.13",
