feat(#402): Add support for modular governance and vsr to the wallet app

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "helium-wallet",
-  "version": "2.5.8",
+  "version": "2.6.0",
   "private": true,
   "scripts": {
     "postinstall": "patch-package && ./node_modules/.bin/rn-nodeify --hack --install && npx jetify",
@@ -40,7 +40,7 @@
     "@helium/address": "4.10.2",
     "@helium/circuit-breaker-sdk": "^0.6.12",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency-utils": "^0.6.6",
+    "@helium/currency-utils": "^0.6.12",
     "@helium/data-credits-sdk": "^0.6.12",
     "@helium/distributor-oracle": "^0.6.12",
     "@helium/fanout-sdk": "^0.6.12",
@@ -50,12 +50,17 @@
     "@helium/http": "4.7.5",
     "@helium/idls": "^0.6.12",
     "@helium/lazy-distributor-sdk": "^0.6.12",
+    "@helium/modular-governance-hooks": "^0.0.8",
+    "@helium/modular-governance-idls": "^0.0.8-next",
     "@helium/onboarding": "4.11.0",
+    "@helium/organization-sdk": "^0.0.8",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "^3.0.4",
     "@helium/spl-utils": "^0.6.12",
+    "@helium/state-controller-sdk": "^0.0.8",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "^0.6.12",
+    "@helium/voter-stake-registry-hooks": "^0.6.12",
     "@helium/voter-stake-registry-sdk": "^0.6.12",
     "@helium/wallet-link": "4.11.0",
     "@jup-ag/api": "^6.0.6",
@@ -63,7 +68,7 @@
     "@ledgerhq/react-native-hid": "6.30.0",
     "@ledgerhq/react-native-hw-transport-ble": "6.29.5",
     "@ledgerhq/types-devices": "^6.22.4",
-    "@metaplex-foundation/js": "0.17.6",
+    "@metaplex-foundation/js": "^0.19.4",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@onsol/tldparser": "^0.5.3",
     "@pythnetwork/client": "2.17.0",
@@ -133,6 +138,7 @@
     "lodash": "4.17.21",
     "long": "5.2.0",
     "lottie-react-native": "^6.3.1",
+    "markdown-it": "^13.0.2",
     "parse5": "6.0.1",
     "patch-package": "6.4.7",
     "path-browserify": "0.0.0",
@@ -141,7 +147,7 @@
     "query-string": "7.1.1",
     "querystring-es3": "0.2.1",
     "react": "18.2.0",
-    "react-async-hook": "4.0.0",
+    "react-async-hook": "^4.0.0",
     "react-i18next": "11.18.4",
     "react-native": "0.71.5",
     "react-native-appstate-hook": "1.0.6",
@@ -161,6 +167,7 @@
     "react-native-linear-gradient": "2.6.2",
     "react-native-localize": "2.2.3",
     "react-native-mail": "6.1.1",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-navigation-bar-color": "2.0.1",
     "react-native-network-info": "5.2.1",
     "react-native-onesignal": "4.4.1",
@@ -183,6 +190,7 @@
     "react-native-test-flight": "1.1.0",
     "react-native-text-ticker": "1.14.0",
     "react-native-udp": "2.7.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-video": "5.2.1",
     "react-native-webview": "12.0.2",
     "react-redux": "8.0.4",
@@ -214,6 +222,7 @@
     "@types/i18n-js": "3.8.2",
     "@types/jest": "26.0.24",
     "@types/lodash": "4.14.183",
+    "@types/markdown-it": "^13.0.5",
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
     "@types/react-native": "0.70.6",
@@ -256,6 +265,11 @@
   },
   "resolutions": {
     "@types/react": "17",
+    "@helium/account-fetch-cache": "^0.6.12",
+    "@helium/account-fetch-cache-hooks": "^0.6.12",
+    "@helium/helium-react-hooks": "^0.6.12",
+    "@helium/voter-stake-registry-hooks": "^0.6.12",
+    "@helium/modular-governance-hooks": "^0.0.8",
     "@helium/onboarding": "4.11.0"
   },
   "jest": {
