--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
     "lottie-react-native": "^6.3.1",
     "markdown-it": "^13.0.2",
     "parse5": "6.0.1",
-    "patch-package": "6.4.7",
+    "patch-package": "^8.0.0",
     "path-browserify": "0.0.0",
     "punycode": "1.4.1",
     "qs": "6.11.0",
@@ -253,6 +253,7 @@
     "jetifier": "1.6.8",
     "lint-staged": "11.2.6",
     "metro-react-native-babel-preset": "0.66.2",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "2.7.1",
     "react-native-cli-bump-version": "1.5.0",
     "react-native-codegen": "0.0.7",
