--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.6.0",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "^0.6.13",
+    "@helium/account-fetch-cache": "file:.yalc/@helium/account-fetch-cache",
     "@helium/account-fetch-cache-hooks": "^0.6.13",
     "@helium/address": "4.10.2",
     "@helium/circuit-breaker-sdk": "^0.6.13",
@@ -55,13 +55,13 @@
     "@helium/onboarding": "4.11.0",
     "@helium/organization-sdk": "^0.0.8",
     "@helium/proto-ble": "4.0.0",
-    "@helium/react-native-sdk": "^3.0.4",
-    "@helium/spl-utils": "^0.6.13",
+    "@helium/react-native-sdk": "file:.yalc/@helium/react-native-sdk",
+    "@helium/spl-utils": "file:.yalc/@helium/spl-utils",
     "@helium/state-controller-sdk": "^0.0.8",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "^0.6.13",
-    "@helium/voter-stake-registry-hooks": "^0.6.13",
-    "@helium/voter-stake-registry-sdk": "^0.6.13",
+    "@helium/voter-stake-registry-hooks": "file:.yalc/@helium/voter-stake-registry-hooks",
+    "@helium/voter-stake-registry-sdk": "file:.yalc/@helium/voter-stake-registry-sdk",
     "@helium/wallet-link": "4.11.0",
     "@jup-ag/api": "^6.0.6",
     "@ledgerhq/hw-app-solana": "7.0.13",
