--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.6.0",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "^0.6.19",
-    "@helium/account-fetch-cache-hooks": "^0.6.19",
+    "@helium/account-fetch-cache": "file:.yalc/@helium/account-fetch-cache",
+    "@helium/account-fetch-cache-hooks": "file:.yalc/@helium/account-fetch-cache-hooks",
     "@helium/address": "4.10.2",
     "@helium/circuit-breaker-sdk": "^0.6.19",
     "@helium/crypto-react-native": "4.8.0",
@@ -37,7 +37,7 @@
     "@helium/distributor-oracle": "^0.6.19",
     "@helium/fanout-sdk": "^0.6.19",
     "@helium/helium-entity-manager-sdk": "^0.6.19",
-    "@helium/helium-react-hooks": "^0.6.19",
+    "@helium/helium-react-hooks": "file:.yalc/@helium/helium-react-hooks",
     "@helium/helium-sub-daos-sdk": "^0.6.19",
     "@helium/http": "4.7.5",
     "@helium/idls": "^0.6.19",
@@ -47,21 +47,22 @@
     "@helium/onboarding": "4.11.0",
     "@helium/organization-sdk": "^0.0.8",
     "@helium/proto-ble": "4.0.0",
-    "@helium/react-native-sdk": "^3.0.4",
-    "@helium/spl-utils": "^0.6.19",
+    "@helium/react-native-sdk": "file:.yalc/@helium/react-native-sdk",
+    "@helium/spl-utils": "file:.yalc/@helium/spl-utils",
     "@helium/state-controller-sdk": "^0.0.8",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "^0.6.19",
-    "@helium/voter-stake-registry-hooks": "^0.6.19",
-    "@helium/voter-stake-registry-sdk": "^0.6.19",
+    "@helium/voter-stake-registry-hooks": "file:.yalc/@helium/voter-stake-registry-hooks",
+    "@helium/voter-stake-registry-sdk": "file:.yalc/@helium/voter-stake-registry-sdk",
     "@helium/wallet-link": "4.11.0",
+    "@irys/sdk": "^0.1.4",
     "@jup-ag/api": "^6.0.6",
     "@ledgerhq/hw-app-solana": "7.0.13",
     "@ledgerhq/react-native-hid": "6.30.0",
     "@ledgerhq/react-native-hw-transport-ble": "6.29.5",
     "@ledgerhq/types-devices": "^6.22.4",
-    "@metaplex-foundation/js": "^0.19.4",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
+    "@metaplex-foundation/mpl-token-metadata": "^2.10.0",
     "@onsol/tldparser": "^0.5.3",
     "@pythnetwork/client": "2.17.0",
     "@react-native-async-storage/async-storage": "1.18.1",
@@ -92,6 +93,7 @@
     "@walletconnect/sign-client": "2.2.1",
     "@walletconnect/types": "2.2.1",
     "angry-purple-tiger": "1.0.5",
+    "arbundles": "^0.11.0",
     "assert": "1.5.0",
     "axios": "1.3.2",
     "axios-mock-adapter": "^1.22.0",
@@ -257,9 +259,9 @@
   "resolutions": {
     "@types/react": "17",
     "@helium/account-fetch-cache": "^0.6.19",
-    "@helium/account-fetch-cache-hooks": "^0.6.19",
-    "@helium/helium-react-hooks": "^0.6.19",
-    "@helium/voter-stake-registry-hooks": "^0.6.19",
+    "@helium/account-fetch-cache-hooks": "file:.yalc/@helium/account-fetch-cache-hooks",
+    "@helium/helium-react-hooks": "file:.yalc/@helium/helium-react-hooks",
+    "@helium/voter-stake-registry-hooks": "file:.yalc/@helium/voter-stake-registry-hooks",
     "@helium/modular-governance-hooks": "^0.0.8",
     "@helium/onboarding": "4.11.0"
   },
