--- a/package.json
+++ b/package.json
@@ -27,41 +27,41 @@
     "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.6.0",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "^0.6.19",
-    "@helium/account-fetch-cache-hooks": "^0.6.19",
+    "@helium/account-fetch-cache": "^0.6.20",
+    "@helium/account-fetch-cache-hooks": "^0.6.20",
     "@helium/address": "4.10.2",
-    "@helium/circuit-breaker-sdk": "^0.6.19",
+    "@helium/circuit-breaker-sdk": "^0.6.20",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency-utils": "^0.6.19",
-    "@helium/data-credits-sdk": "^0.6.19",
-    "@helium/distributor-oracle": "^0.6.19",
-    "@helium/fanout-sdk": "^0.6.19",
-    "@helium/helium-entity-manager-sdk": "^0.6.19",
-    "@helium/helium-react-hooks": "^0.6.19",
-    "@helium/helium-sub-daos-sdk": "^0.6.19",
+    "@helium/currency-utils": "^0.6.20",
+    "@helium/data-credits-sdk": "^0.6.20",
+    "@helium/distributor-oracle": "^0.6.20",
+    "@helium/fanout-sdk": "^0.6.20",
+    "@helium/helium-entity-manager-sdk": "^0.6.20",
+    "@helium/helium-react-hooks": "^0.6.20",
+    "@helium/helium-sub-daos-sdk": "^0.6.20",
     "@helium/http": "4.7.5",
-    "@helium/idls": "^0.6.19",
-    "@helium/lazy-distributor-sdk": "^0.6.19",
+    "@helium/idls": "^0.6.20",
+    "@helium/lazy-distributor-sdk": "^0.6.20",
     "@helium/modular-governance-hooks": "^0.0.8",
     "@helium/modular-governance-idls": "^0.0.8-next",
     "@helium/onboarding": "4.11.0",
     "@helium/organization-sdk": "^0.0.8",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "^3.0.4",
-    "@helium/spl-utils": "^0.6.19",
+    "@helium/spl-utils": "^0.6.20",
     "@helium/state-controller-sdk": "^0.0.8",
     "@helium/transactions": "4.8.1",
-    "@helium/treasury-management-sdk": "^0.6.19",
-    "@helium/voter-stake-registry-hooks": "^0.6.19",
-    "@helium/voter-stake-registry-sdk": "^0.6.19",
+    "@helium/treasury-management-sdk": "^0.6.20",
+    "@helium/voter-stake-registry-hooks": "^0.6.20",
+    "@helium/voter-stake-registry-sdk": "^0.6.20",
     "@helium/wallet-link": "4.11.0",
     "@jup-ag/api": "^6.0.6",
     "@ledgerhq/hw-app-solana": "7.0.13",
     "@ledgerhq/react-native-hid": "6.30.0",
     "@ledgerhq/react-native-hw-transport-ble": "6.29.5",
     "@ledgerhq/types-devices": "^6.22.4",
-    "@metaplex-foundation/js": "^0.19.4",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
+    "@metaplex-foundation/mpl-token-metadata": "2.10.0",
     "@onsol/tldparser": "^0.5.3",
     "@pythnetwork/client": "2.17.0",
     "@react-native-async-storage/async-storage": "1.18.1",
@@ -256,10 +256,10 @@
   },
   "resolutions": {
     "@types/react": "17",
-    "@helium/account-fetch-cache": "^0.6.19",
-    "@helium/account-fetch-cache-hooks": "^0.6.19",
-    "@helium/helium-react-hooks": "^0.6.19",
-    "@helium/voter-stake-registry-hooks": "^0.6.19",
+    "@helium/account-fetch-cache": "^0.6.20",
+    "@helium/account-fetch-cache-hooks": "^0.6.20",
+    "@helium/helium-react-hooks": "^0.6.20",
+    "@helium/voter-stake-registry-hooks": "^0.6.20",
     "@helium/modular-governance-hooks": "^0.0.8",
     "@helium/onboarding": "4.11.0"
   },
