--- a/.env.sample
+++ b/.env.sample
@@ -13,6 +13,7 @@ MIGRATION_SERVER_URL=
 RPC_SESSION_KEY_FALLBACK=
 TOKENS_TO_RENT_SERVICE_URL=
 TOKENS_TO_RENT_SERVICE_DEVNET_URL=
+JUP_SWAP_API=
 MAPBOX_ACCESS_TOKEN=
 MAPBOX_STYLE_URL=
 MAPBOX_DOWNLOAD_TOKEN=
