--- a/package.json
+++ b/package.json
@@ -130,7 +130,8 @@
     "i18next": "21.9.1",
     "lodash": "4.17.21",
     "long": "5.2.0",
-    "lottie-react-native": "^6.3.1",
+    "lottie-ios": "^4.4.1",
+    "lottie-react-native": "^6.7.0",
     "markdown-it": "^13.0.2",
     "parse5": "6.0.1",
     "patch-package": "^8.0.0",
