--- a/package.json
+++ b/package.json
@@ -27,34 +27,34 @@
     "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.6.0",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "0.6.34",
-    "@helium/account-fetch-cache-hooks": "0.6.34",
+    "@helium/account-fetch-cache": "0.6.35",
+    "@helium/account-fetch-cache-hooks": "0.6.35",
     "@helium/address": "4.10.2",
-    "@helium/circuit-breaker-sdk": "0.6.34",
+    "@helium/circuit-breaker-sdk": "0.6.35",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency-utils": "0.6.34",
-    "@helium/data-credits-sdk": "0.6.34",
-    "@helium/distributor-oracle": "0.6.34",
-    "@helium/fanout-sdk": "0.6.34",
-    "@helium/helium-entity-manager-sdk": "0.6.34",
-    "@helium/helium-react-hooks": "0.6.34",
-    "@helium/helium-sub-daos-sdk": "0.6.34",
+    "@helium/currency-utils": "0.6.35",
+    "@helium/data-credits-sdk": "0.6.35",
+    "@helium/distributor-oracle": "0.6.35",
+    "@helium/fanout-sdk": "0.6.35",
+    "@helium/helium-entity-manager-sdk": "0.6.35",
+    "@helium/helium-react-hooks": "0.6.35",
+    "@helium/helium-sub-daos-sdk": "0.6.35",
     "@helium/http": "4.7.5",
-    "@helium/idls": "0.6.34",
-    "@helium/lazy-distributor-sdk": "0.6.34",
+    "@helium/idls": "0.6.35",
+    "@helium/lazy-distributor-sdk": "0.6.35",
     "@helium/modular-governance-hooks": "^0.0.8",
     "@helium/modular-governance-idls": "^0.0.8-next",
     "@helium/onboarding": "4.11.0",
     "@helium/organization-sdk": "^0.0.8",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "^3.0.4",
-    "@helium/spl-utils": "0.6.34",
+    "@helium/spl-utils": "0.6.35",
     "@helium/state-controller-sdk": "^0.0.8",
-    "@helium/sus": "^0.6.34",
+    "@helium/sus": "^0.6.35",
     "@helium/transactions": "4.8.1",
-    "@helium/treasury-management-sdk": "0.6.34",
-    "@helium/voter-stake-registry-hooks": "0.6.34",
-    "@helium/voter-stake-registry-sdk": "0.6.34",
+    "@helium/treasury-management-sdk": "0.6.35",
+    "@helium/voter-stake-registry-hooks": "0.6.35",
+    "@helium/voter-stake-registry-sdk": "0.6.35",
     "@helium/wallet-link": "4.11.0",
     "@jup-ag/api": "^6.0.6",
     "@ledgerhq/hw-app-solana": "7.0.13",
@@ -130,7 +130,8 @@
     "i18next": "21.9.1",
     "lodash": "4.17.21",
     "long": "5.2.0",
-    "lottie-react-native": "^6.3.1",
+    "lottie-ios": "^4.4.1",
+    "lottie-react-native": "^6.7.0",
     "markdown-it": "^13.0.2",
     "parse5": "6.0.1",
     "patch-package": "^8.0.0",
@@ -257,10 +258,10 @@
   },
   "resolutions": {
     "@types/react": "17",
-    "@helium/account-fetch-cache": "0.6.34",
-    "@helium/account-fetch-cache-hooks": "0.6.34",
-    "@helium/helium-react-hooks": "0.6.34",
-    "@helium/voter-stake-registry-hooks": "0.6.34",
+    "@helium/account-fetch-cache": "0.6.35",
+    "@helium/account-fetch-cache-hooks": "0.6.35",
+    "@helium/helium-react-hooks": "0.6.35",
+    "@helium/voter-stake-registry-hooks": "0.6.35",
     "@helium/modular-governance-hooks": "^0.0.8",
     "@helium/onboarding": "4.11.0"
   },
