--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@ledgerhq/react-native-hid": "6.30.0",
     "@ledgerhq/react-native-hw-transport-ble": "6.29.5",
     "@ledgerhq/types-devices": "^6.22.4",
+    "@maplibre/maplibre-react-native": "^10.0.0-alpha.2",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@metaplex-foundation/mpl-token-metadata": "2.10.0",
     "@onsol/tldparser": "^0.5.3",
@@ -161,7 +162,6 @@
     "react-native-linear-gradient": "2.6.2",
     "react-native-localize": "2.2.3",
     "react-native-mail": "6.1.1",
-    "react-native-maps": "^1.11.3",
     "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-navigation-bar-color": "2.0.1",
     "react-native-network-info": "5.2.1",
