--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@turf/bbox": "6.5.0",
     "@turf/center": "6.5.0",
     "@turf/helpers": "6.5.0",
+    "@types/base-64": "^1.0.2",
     "@walletconnect/react-native-compat": "2.2.1",
     "@walletconnect/sign-client": "2.2.1",
     "@walletconnect/types": "2.2.1",
