update sample, pull apart hexbuckets and route hotspot logic

--- a/.env.sample
+++ b/.env.sample
@@ -14,4 +14,5 @@ RPC_SESSION_KEY_FALLBACK=
 TOKENS_TO_RENT_SERVICE_URL=
 TOKENS_TO_RENT_SERVICE_DEVNET_URL=
 JUP_SWAP_API=
-PMTILES_URL
+PMTILES_URL=
+VIEW_AS=
