--- a/package.json
+++ b/package.json
@@ -214,9 +214,11 @@
     "@ledgerhq/hw-transport-mocker": "6.27.2",
     "@tsconfig/react-native": "2.0.2",
     "@types/bn.js": "5.1.1",
+    "@types/debounce": "^1.2.4",
     "@types/i18n-js": "3.8.2",
     "@types/jest": "26.0.24",
     "@types/lodash": "4.14.183",
+    "@types/mapbox__geo-viewport": "^0.5.3",
     "@types/markdown-it": "^13.0.5",
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
