--- a/.env.sample
+++ b/.env.sample
@@ -7,8 +7,7 @@ MAINNET_RPC_URL=
 DEVNET_RPC_URL=
 SOLANA_PREVIEW=
 WALLET_REST_URI=
-ONBOARDING_SERVER_URL=
-ONBOARDING_SERVER_AUTH=
+ONBOARDING_API_URL=
 MIGRATION_SERVER_URL=
 RPC_SESSION_KEY_FALLBACK=
 TOKENS_TO_RENT_SERVICE_URL=
