--- a/.env.sample
+++ b/.env.sample
@@ -7,13 +7,11 @@ MAINNET_RPC_URL=
 DEVNET_RPC_URL=
 SOLANA_PREVIEW=
 WALLET_REST_URI=
-ONBOARDING_SERVER_URL=
-ONBOARDING_SERVER_AUTH=
+ONBOARDING_API_URL=
 MIGRATION_SERVER_URL=
 RPC_SESSION_KEY_FALLBACK=
 TOKENS_TO_RENT_SERVICE_URL=
 TOKENS_TO_RENT_SERVICE_DEVNET_URL=
 JUP_SWAP_API=
-MAPBOX_ACCESS_TOKEN=
-MAPBOX_STYLE_URL=
-MAPBOX_DOWNLOAD_TOKEN=
+PMTILES_URL=
+VIEW_AS=
