--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "helium-wallet",
-  "version": "2.7.5",
+  "version": "2.8.0",
   "private": true,
   "scripts": {
     "postinstall": "patch-package && ./node_modules/.bin/rn-nodeify --hack --install && npx jetify",
@@ -61,6 +61,7 @@
     "@ledgerhq/react-native-hid": "6.30.0",
     "@ledgerhq/react-native-hw-transport-ble": "6.29.5",
     "@ledgerhq/types-devices": "^6.22.4",
+    "@maplibre/maplibre-react-native": "^10.0.0-alpha.2",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@metaplex-foundation/mpl-token-metadata": "2.10.0",
     "@onsol/tldparser": "^0.5.3",
@@ -77,7 +78,6 @@
     "@react-navigation/native-stack": "6.7.0",
     "@react-navigation/stack": "6.2.2",
     "@reduxjs/toolkit": "1.9.1",
-    "@rnmapbox/maps": "10.0.7-rc.0",
     "@shopify/restyle": "1.8.0",
     "@solana/spl-account-compression": "0.1.4",
     "@solana/spl-memo": "0.2.3",
@@ -89,6 +89,7 @@
     "@turf/bbox": "6.5.0",
     "@turf/center": "6.5.0",
     "@turf/helpers": "6.5.0",
+    "@types/base-64": "^1.0.2",
     "@walletconnect/react-native-compat": "2.2.1",
     "@walletconnect/sign-client": "2.2.1",
     "@walletconnect/types": "2.2.1",
@@ -215,9 +216,11 @@
     "@ledgerhq/hw-transport-mocker": "6.27.2",
     "@tsconfig/react-native": "2.0.2",
     "@types/bn.js": "5.1.1",
+    "@types/debounce": "^1.2.4",
     "@types/i18n-js": "3.8.2",
     "@types/jest": "26.0.24",
     "@types/lodash": "4.14.183",
+    "@types/mapbox__geo-viewport": "^0.5.3",
     "@types/markdown-it": "^13.0.5",
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
