--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "querystring-es3": "0.2.1",
     "react": "18.2.0",
     "react-async-hook": "^4.0.0",
+    "react-error-boundary": "^4.0.13",
     "react-i18next": "11.18.4",
     "react-native": "0.71.5",
     "react-native-appstate-hook": "1.0.6",
