--- a/package.json
+++ b/package.json
@@ -27,34 +27,34 @@
     "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.6.0",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "0.7.17",
-    "@helium/account-fetch-cache-hooks": "0.7.17",
+    "@helium/account-fetch-cache": "0.6.2-next.34+823cc6bd",
+    "@helium/account-fetch-cache-hooks": "0.6.2-next.34+823cc6bd",
     "@helium/address": "4.10.2",
-    "@helium/circuit-breaker-sdk": "0.7.17",
+    "@helium/circuit-breaker-sdk": "0.6.2-next.34+823cc6bd",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency-utils": "0.7.17",
-    "@helium/data-credits-sdk": "0.7.17",
-    "@helium/distributor-oracle": "0.7.17",
-    "@helium/fanout-sdk": "0.7.17",
-    "@helium/helium-entity-manager-sdk": "0.7.17",
-    "@helium/helium-react-hooks": "0.7.17",
-    "@helium/helium-sub-daos-sdk": "0.7.17",
+    "@helium/currency-utils": "^0.7.17",
+    "@helium/data-credits-sdk": "0.6.2-next.34+823cc6bd",
+    "@helium/distributor-oracle": "0.6.2-next.34+823cc6bd",
+    "@helium/fanout-sdk": "0.6.2-next.34+823cc6bd",
+    "@helium/helium-entity-manager-sdk": "0.6.2-next.34+823cc6bd",
+    "@helium/helium-react-hooks": "0.6.2-next.34+823cc6bd",
+    "@helium/helium-sub-daos-sdk": "0.6.2-next.34+823cc6bd",
     "@helium/http": "4.7.5",
-    "@helium/idls": "0.7.17",
-    "@helium/lazy-distributor-sdk": "0.7.17",
+    "@helium/idls": "0.6.2-next.34+823cc6bd",
+    "@helium/lazy-distributor-sdk": "0.6.2-next.34+823cc6bd",
     "@helium/modular-governance-hooks": "^0.0.8",
     "@helium/modular-governance-idls": "^0.0.8-next",
     "@helium/onboarding": "4.11.0",
     "@helium/organization-sdk": "^0.0.8",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "^3.0.4",
-    "@helium/spl-utils": "0.7.17",
+    "@helium/spl-utils": "0.6.2-next.34+823cc6bd",
     "@helium/state-controller-sdk": "^0.0.8",
-    "@helium/sus": "0.7.17",
+    "@helium/sus": "0.6.2-next.34+823cc6bd",
     "@helium/transactions": "4.8.1",
-    "@helium/treasury-management-sdk": "0.7.17",
-    "@helium/voter-stake-registry-hooks": "0.7.17",
-    "@helium/voter-stake-registry-sdk": "0.7.17",
+    "@helium/treasury-management-sdk": "0.6.2-next.34+823cc6bd",
+    "@helium/voter-stake-registry-hooks": "file:.yalc/@helium/voter-stake-registry-hooks",
+    "@helium/voter-stake-registry-sdk": "file:.yalc/@helium/voter-stake-registry-sdk",
     "@helium/wallet-link": "4.11.0",
     "@jup-ag/api": "^6.0.6",
     "@ledgerhq/hw-app-solana": "7.0.13",
@@ -264,10 +264,10 @@
   },
   "resolutions": {
     "@types/react": "17",
-    "@helium/account-fetch-cache": "0.7.17",
-    "@helium/account-fetch-cache-hooks": "0.7.17",
-    "@helium/helium-react-hooks": "0.7.17",
-    "@helium/voter-stake-registry-hooks": "0.7.17",
+    "@helium/account-fetch-cache": "0.6.2-next.34+823cc6bd",
+    "@helium/account-fetch-cache-hooks": "0.6.2-next.34+823cc6bd",
+    "@helium/helium-react-hooks": "0.6.2-next.34+823cc6bd",
+    "@helium/voter-stake-registry-hooks": "0.6.2-next.34+823cc6bd",
     "@helium/modular-governance-hooks": "^0.0.8",
     "@helium/onboarding": "4.11.0"
   },
