--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
     "@react-native-community/netinfo": "9.3.7",
+    "@react-native-community/slider": "^4.5.2",
     "@react-navigation/bottom-tabs": "6.4.0",
     "@react-navigation/material-top-tabs": "6.5.1",
     "@react-navigation/native": "6.0.11",
