--- a/.env.sample
+++ b/.env.sample
@@ -9,6 +9,7 @@ SOLANA_PREVIEW=
 WALLET_REST_URI=
 ONBOARDING_API_URL=
 HELIUM_VOTE_API_URL=
+DEVNET_HELIUM_VOTE_API_URL=
 MIGRATION_SERVER_URL=
 RPC_SESSION_KEY_FALLBACK=
 TOKENS_TO_RENT_SERVICE_URL=
