--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.6.0",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "0.6.2-next.34+823cc6bd",
-    "@helium/account-fetch-cache-hooks": "0.6.2-next.34+823cc6bd",
+    "@helium/account-fetch-cache": "file:.yalc/@helium/account-fetch-cache",
+    "@helium/account-fetch-cache-hooks": "file:.yalc/@helium/account-fetch-cache-hooks",
     "@helium/address": "4.10.2",
     "@helium/circuit-breaker-sdk": "0.6.2-next.34+823cc6bd",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency-utils": "^0.7.17",
     "@helium/data-credits-sdk": "0.6.2-next.34+823cc6bd",
-    "@helium/distributor-oracle": "0.6.2-next.34+823cc6bd",
+    "@helium/distributor-oracle": "file:.yalc/@helium/distributor-oracle",
     "@helium/fanout-sdk": "0.6.2-next.34+823cc6bd",
     "@helium/helium-entity-manager-sdk": "0.6.2-next.34+823cc6bd",
     "@helium/helium-react-hooks": "0.6.2-next.34+823cc6bd",
@@ -48,9 +48,9 @@
     "@helium/organization-sdk": "^0.0.8",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "^3.0.4",
-    "@helium/spl-utils": "0.6.2-next.34+823cc6bd",
+    "@helium/spl-utils": "file:.yalc/@helium/spl-utils",
     "@helium/state-controller-sdk": "^0.0.8",
-    "@helium/sus": "0.6.2-next.34+823cc6bd",
+    "@helium/sus": "file:.yalc/@helium/sus",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "0.6.2-next.34+823cc6bd",
     "@helium/voter-stake-registry-hooks": "file:.yalc/@helium/voter-stake-registry-hooks",
@@ -86,6 +86,7 @@
     "@solana/wallet-adapter-react": "0.15.33",
     "@solana/wallet-standard-features": "1.0.0",
     "@solana/web3.js": "^1.87.6",
+    "@tanstack/react-query": "^5.45.1",
     "@tradle/react-native-http": "2.0.1",
     "@turf/bbox": "6.5.0",
     "@turf/center": "6.5.0",
