--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "@helium/helium-react-hooks": "0.6.2-next.34+823cc6bd",
     "@helium/helium-sub-daos-sdk": "0.6.2-next.34+823cc6bd",
     "@helium/http": "4.7.5",
-    "@helium/idls": "0.6.2-next.34+823cc6bd",
+    "@helium/idls": "file:.yalc/@helium/idls",
     "@helium/lazy-distributor-sdk": "0.6.2-next.34+823cc6bd",
     "@helium/modular-governance-hooks": "^0.0.8",
-    "@helium/modular-governance-idls": "^0.0.8-next",
+    "@helium/modular-governance-idls": "file:.yalc/@helium/modular-governance-idls",
     "@helium/onboarding": "4.11.0",
     "@helium/organization-sdk": "^0.0.8",
     "@helium/proto-ble": "4.0.0",
