--- a/package.json
+++ b/package.json
@@ -27,34 +27,34 @@
     "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.6.0",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "0.8.4",
-    "@helium/account-fetch-cache-hooks": "0.8.4",
+    "@helium/account-fetch-cache": "0.8.5",
+    "@helium/account-fetch-cache-hooks": "0.8.5",
     "@helium/address": "4.10.2",
-    "@helium/circuit-breaker-sdk": "0.8.4",
+    "@helium/circuit-breaker-sdk": "0.8.5",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency-utils": "0.7.17",
-    "@helium/data-credits-sdk": "0.8.4",
-    "@helium/distributor-oracle": "0.8.4",
-    "@helium/fanout-sdk": "0.8.4",
-    "@helium/helium-entity-manager-sdk": "0.8.4",
-    "@helium/helium-react-hooks": "0.8.4",
-    "@helium/helium-sub-daos-sdk": "0.8.4",
+    "@helium/currency-utils": "0.8.5",
+    "@helium/data-credits-sdk": "0.8.5",
+    "@helium/distributor-oracle": "0.8.5",
+    "@helium/fanout-sdk": "0.8.5",
+    "@helium/helium-entity-manager-sdk": "0.8.5",
+    "@helium/helium-react-hooks": "0.8.5",
+    "@helium/helium-sub-daos-sdk": "0.8.5",
     "@helium/http": "4.7.5",
-    "@helium/idls": "0.8.4",
-    "@helium/lazy-distributor-sdk": "0.8.4",
+    "@helium/idls": "0.8.5",
+    "@helium/lazy-distributor-sdk": "0.8.5",
     "@helium/modular-governance-hooks": "^0.0.11",
     "@helium/modular-governance-idls": "^0.0.11",
     "@helium/onboarding": "4.11.0",
     "@helium/organization-sdk": "^0.0.8",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "^3.0.4",
-    "@helium/spl-utils": "0.8.4",
+    "@helium/spl-utils": "0.8.5",
     "@helium/state-controller-sdk": "^0.0.8",
-    "@helium/sus": "0.8.4",
+    "@helium/sus": "0.8.5",
     "@helium/transactions": "4.8.1",
-    "@helium/treasury-management-sdk": "0.8.4",
-    "@helium/voter-stake-registry-hooks": "0.8.4",
-    "@helium/voter-stake-registry-sdk": "0.8.4",
+    "@helium/treasury-management-sdk": "0.8.5",
+    "@helium/voter-stake-registry-hooks": "0.8.5",
+    "@helium/voter-stake-registry-sdk": "0.8.5",
     "@helium/wallet-link": "4.11.0",
     "@jup-ag/api": "^6.0.6",
     "@ledgerhq/hw-app-solana": "7.0.13",
@@ -81,6 +81,7 @@
     "@solana/spl-account-compression": "0.1.4",
     "@solana/spl-memo": "0.2.3",
     "@solana/spl-token": "0.3.6",
+    "@solana/spl-token-metadata": "^0.1.4",
     "@solana/wallet-adapter-react": "0.15.33",
     "@solana/wallet-standard-features": "1.0.0",
     "@solana/web3.js": "^1.87.6",
@@ -263,10 +264,10 @@
   },
   "resolutions": {
     "@types/react": "17",
-    "@helium/account-fetch-cache": "0.8.4",
-    "@helium/account-fetch-cache-hooks": "0.8.4",
-    "@helium/helium-react-hooks": "0.8.4",
-    "@helium/voter-stake-registry-hooks": "0.8.4",
+    "@helium/account-fetch-cache": "0.8.5",
+    "@helium/account-fetch-cache-hooks": "0.8.5",
+    "@helium/helium-react-hooks": "0.8.5",
+    "@helium/voter-stake-registry-hooks": "0.8.5",
     "@helium/modular-governance-hooks": "^0.0.11",
     "@helium/onboarding": "4.11.0"
   },
