--- a/package.json
+++ b/package.json
@@ -27,20 +27,20 @@
     "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.6.0",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "^0.8.2",
-    "@helium/account-fetch-cache-hooks": "^0.8.2",
+    "@helium/account-fetch-cache": "^0.9.0-alpha.1",
+    "@helium/account-fetch-cache-hooks": "^0.9.0-alpha.1",
     "@helium/address": "4.10.2",
     "@helium/circuit-breaker-sdk": "0.6.2-next.34+823cc6bd",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency-utils": "^0.7.17",
+    "@helium/currency-utils": "^0.9.0-alpha.1",
     "@helium/data-credits-sdk": "0.6.2-next.34+823cc6bd",
-    "@helium/distributor-oracle": "^0.8.2",
+    "@helium/distributor-oracle": "^0.9.0-alpha.1",
     "@helium/fanout-sdk": "0.6.2-next.34+823cc6bd",
     "@helium/helium-entity-manager-sdk": "0.6.2-next.34+823cc6bd",
     "@helium/helium-react-hooks": "0.6.2-next.34+823cc6bd",
     "@helium/helium-sub-daos-sdk": "0.6.2-next.34+823cc6bd",
     "@helium/http": "4.7.5",
-    "@helium/idls": "^0.8.2",
+    "@helium/idls": "^0.9.0-alpha.1",
     "@helium/lazy-distributor-sdk": "0.6.2-next.34+823cc6bd",
     "@helium/modular-governance-hooks": "^0.0.8",
     "@helium/modular-governance-idls": "^0.0.8",
@@ -48,13 +48,13 @@
     "@helium/organization-sdk": "^0.0.8",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "^3.0.4",
-    "@helium/spl-utils": "^0.8.2",
+    "@helium/spl-utils": "^0.9.0-alpha.1",
     "@helium/state-controller-sdk": "^0.0.8",
-    "@helium/sus": "^0.8.2",
+    "@helium/sus": "^0.9.0-alpha.1",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "0.6.2-next.34+823cc6bd",
-    "@helium/voter-stake-registry-hooks": "^0.8.2",
-    "@helium/voter-stake-registry-sdk": "^0.8.2",
+    "@helium/voter-stake-registry-hooks": "^0.9.0-alpha.1",
+    "@helium/voter-stake-registry-sdk": "^0.9.0-alpha.1",
     "@helium/wallet-link": "4.11.0",
     "@jup-ag/api": "^6.0.6",
     "@ledgerhq/hw-app-solana": "7.0.13",
