--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "helium-wallet",
-  "version": "2.8.1",
+  "version": "2.8.2",
   "private": true,
   "scripts": {
     "postinstall": "patch-package && ./node_modules/.bin/rn-nodeify --hack --install && npx jetify",
@@ -47,7 +47,7 @@
     "@helium/onboarding": "4.11.0",
     "@helium/organization-sdk": "^0.0.8",
     "@helium/proto-ble": "4.0.0",
-    "@helium/react-native-sdk": "^3.0.4",
+    "@helium/react-native-sdk": "3.0.5",
     "@helium/spl-utils": "0.8.6",
     "@helium/state-controller-sdk": "^0.0.8",
     "@helium/sus": "0.8.6",
