--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "@helium/idls": "0.9.0-alpha.6",
     "@helium/lazy-distributor-sdk": "^0.9.0-alpha.6",
     "@helium/modular-governance-hooks": "^0.0.8",
-    "@helium/modular-governance-idls": "0.9.0-alpha.6",
+    "@helium/modular-governance-idls": "0.0.8-next.22+7098baa",
     "@helium/onboarding": "4.11.0",
     "@helium/organization-sdk": "^0.0.8",
     "@helium/proto-ble": "4.0.0",
-    "@helium/react-native-sdk": "0.9.0-alpha.6",
+    "@helium/react-native-sdk": "3.0.5",
     "@helium/spl-utils": "0.9.0-alpha.6",
     "@helium/state-controller-sdk": "^0.0.8",
     "@helium/sus": "0.9.0-alpha.6",
