HIP 110: Proxy voting (#763)

--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,8 @@ DEVNET_RPC_URL=
 SOLANA_PREVIEW=
 WALLET_REST_URI=
 ONBOARDING_API_URL=
+HELIUM_VOTE_API_URL=
+DEVNET_HELIUM_VOTE_API_URL=
 MIGRATION_SERVER_URL=
 RPC_SESSION_KEY_FALLBACK=
 TOKENS_TO_RENT_SERVICE_URL=
