--- a/package.json
+++ b/package.json
@@ -27,34 +27,34 @@
     "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.6.0",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "0.9.0-alpha.9",
-    "@helium/account-fetch-cache-hooks": "0.9.0-alpha.9",
+    "@helium/account-fetch-cache": "0.9.2",
+    "@helium/account-fetch-cache-hooks": "0.9.2",
     "@helium/address": "4.10.2",
-    "@helium/circuit-breaker-sdk": "^0.9.0-alpha.9",
+    "@helium/circuit-breaker-sdk": "^0.9.2",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency-utils": "^0.9.0-alpha.9",
-    "@helium/data-credits-sdk": "^0.9.0-alpha.9",
-    "@helium/distributor-oracle": "0.9.0-alpha.9",
-    "@helium/fanout-sdk": "^0.9.0-alpha.9",
-    "@helium/helium-entity-manager-sdk": "^0.9.0-alpha.9",
-    "@helium/helium-react-hooks": "0.9.0-alpha.9",
-    "@helium/helium-sub-daos-sdk": "^0.9.0-alpha.9",
+    "@helium/currency-utils": "^0.9.2",
+    "@helium/data-credits-sdk": "^0.9.2",
+    "@helium/distributor-oracle": "0.9.2",
+    "@helium/fanout-sdk": "^0.9.2",
+    "@helium/helium-entity-manager-sdk": "^0.9.2",
+    "@helium/helium-react-hooks": "0.9.2",
+    "@helium/helium-sub-daos-sdk": "^0.9.2",
     "@helium/http": "4.7.5",
-    "@helium/idls": "0.9.0-alpha.9",
-    "@helium/lazy-distributor-sdk": "^0.9.0-alpha.9",
+    "@helium/idls": "0.9.2",
+    "@helium/lazy-distributor-sdk": "^0.9.2",
     "@helium/modular-governance-hooks": "^0.0.8",
     "@helium/modular-governance-idls": "0.0.8-next.22+7098baa",
     "@helium/onboarding": "4.11.0",
     "@helium/organization-sdk": "^0.0.8",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "3.0.5",
-    "@helium/spl-utils": "0.9.0-alpha.9",
+    "@helium/spl-utils": "0.9.2",
     "@helium/state-controller-sdk": "^0.0.8",
-    "@helium/sus": "0.9.0-alpha.9",
+    "@helium/sus": "0.9.2",
     "@helium/transactions": "4.8.1",
-    "@helium/treasury-management-sdk": "^0.9.0-alpha.9",
-    "@helium/voter-stake-registry-hooks": "0.9.0-alpha.9",
-    "@helium/voter-stake-registry-sdk": "0.9.0-alpha.9",
+    "@helium/treasury-management-sdk": "^0.9.2",
+    "@helium/voter-stake-registry-hooks": "0.9.2",
+    "@helium/voter-stake-registry-sdk": "0.9.2",
     "@helium/wallet-link": "4.11.0",
     "@jup-ag/api": "^6.0.6",
     "@ledgerhq/hw-app-solana": "7.0.13",
@@ -266,11 +266,11 @@
   },
   "resolutions": {
     "@types/react": "17",
-    "@helium/account-fetch-cache": "^0.9.0-alpha.9",
-    "@helium/account-fetch-cache-hooks": "^0.9.0-alpha.9",
-    "@helium/helium-react-hooks": "^0.9.0-alpha.9",
-    "@helium/voter-stake-registry-hooks": "^0.9.0-alpha.9",
-    "@helium/voter-stake-registry-sdk": "^0.9.0-alpha.9",
+    "@helium/account-fetch-cache": "^0.9.2",
+    "@helium/account-fetch-cache-hooks": "^0.9.2",
+    "@helium/helium-react-hooks": "^0.9.2",
+    "@helium/voter-stake-registry-hooks": "^0.9.2",
+    "@helium/voter-stake-registry-sdk": "^0.9.2",
     "@helium/modular-governance-hooks": "^0.0.8",
     "@helium/onboarding": "4.11.0"
   },
