--- a/package.json
+++ b/package.json
@@ -65,13 +65,13 @@
     "@ledgerhq/react-native-hid": "6.30.0",
     "@ledgerhq/react-native-hw-transport-ble": "6.29.5",
     "@ledgerhq/types-devices": "^6.22.4",
-    "@maplibre/maplibre-react-native": "^10.0.0-alpha.2",
+    "@maplibre/maplibre-react-native": "^9.1.0",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@metaplex-foundation/mpl-token-metadata": "2.10.0",
     "@onsol/tldparser": "^0.5.3",
     "@react-native-async-storage/async-storage": "1.18.1",
     "@react-native-community/blur": "4.3.0",
-    "@react-native-community/checkbox": "0.5.15",
+    "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
     "@react-native-community/netinfo": "9.3.7",
@@ -130,7 +130,6 @@
     "expo-haptics": "13.0.1",
     "expo-linking": "6.3.1",
     "expo-local-authentication": "14.0.1",
-    "expo-permissions": "14.4.0",
     "expo-secure-store": "13.0.2",
     "expo-splash-screen": "0.27.5",
     "fuse.js": "6.6.2",
@@ -142,6 +141,7 @@
     "lottie-ios": "^4.4.1",
     "lottie-react-native": "^6.7.0",
     "markdown-it": "^13.0.2",
+    "metro-react-native-babel-transformer": "^0.77.0",
     "parse5": "6.0.1",
     "patch-package": "^8.0.0",
     "path-browserify": "0.0.0",
@@ -161,7 +161,7 @@
     "react-native-crypto": "2.2.0",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-gesture-handler": "2.9.0",
+    "react-native-gesture-handler": "2.18.1",
     "react-native-get-random-values": "1.8.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
@@ -171,22 +171,22 @@
     "react-native-localize": "2.2.3",
     "react-native-mail": "6.1.1",
     "react-native-markdown-display": "^7.0.0-alpha.2",
-    "react-native-navigation-bar-color": "2.0.1",
+    "react-native-navigation-bar-color": "2.0.2",
     "react-native-network-info": "5.2.1",
-    "react-native-onesignal": "4.4.1",
-    "react-native-os": "1.2.6",
+    "react-native-onesignal": "5.2.2",
+    "react-native-os": "^1.2.6",
     "react-native-pager-view": "6.1.2",
     "react-native-permissions": "^3.9.0",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "3.14.0",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-safe-area-context": "4.10.8",
     "react-native-screens": "3.34.0",
     "react-native-share": "7.9.0",
-    "react-native-shared-group-preferences": "1.1.23",
+    "react-native-shared-group-preferences": "1.1.24",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-sodium": "0.4.0",
+    "react-native-sodium": "^0.4.0",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "3.3.4",
     "react-native-tcp": "3.3.2",
@@ -195,7 +195,7 @@
     "react-native-udp": "2.7.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-video": "5.2.1",
-    "react-native-webview": "12.0.2",
+    "react-native-webview": "13.10.5",
     "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
     "redux-persist": "6.0.0",
@@ -270,7 +270,8 @@
     "typescript": "5.0.4"
   },
   "resolutions": {
-    "@types/react": "17",
+    "@types/react": "18",
+    "react": "18.2.0",
     "@helium/account-fetch-cache": "^0.9.2",
     "@helium/account-fetch-cache-hooks": "^0.9.2",
     "@helium/helium-react-hooks": "^0.9.2",
@@ -289,7 +290,6 @@
     "domain": "domain-browser",
     "http": "@tradle/react-native-http",
     "https": "https-browserify",
-    "os": "react-native-os",
     "path": "path-browserify",
     "querystring": "querystring-es3",
     "fs": "react-native-level-fs",
@@ -303,7 +303,8 @@
     "timers": "timers-browserify",
     "tty": "tty-browserify",
     "vm": "vm-browserify",
-    "tls": false
+    "tls": false,
+    "os": "react-native-os"
   },
   "browser": {
     "_stream_duplex": "readable-stream/duplex",
