feat: add keystone connect wallet support

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@helium/voter-stake-registry-sdk": "0.9.7",
     "@helium/wallet-link": "4.11.0",
     "@jup-ag/api": "^6.0.6",
+    "@keystonehq/keystone-sdk": "^0.8.0",
     "@ledgerhq/hw-app-solana": "7.0.13",
     "@ledgerhq/react-native-hid": "6.30.0",
     "@ledgerhq/react-native-hw-transport-ble": "6.29.5",
@@ -68,6 +69,7 @@
     "@maplibre/maplibre-react-native": "^9.1.0",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@metaplex-foundation/mpl-token-metadata": "2.10.0",
+    "@ngraveio/bc-ur": "^1.1.13",
     "@onsol/tldparser": "^0.5.3",
     "@react-native-async-storage/async-storage": "1.18.1",
     "@react-native-community/blur": "4.3.0",
