--- a/package.json
+++ b/package.json
@@ -46,14 +46,14 @@
     "@helium/http": "4.7.5",
     "@helium/idls": "0.9.2",
     "@helium/lazy-distributor-sdk": "^0.9.2",
-    "@helium/modular-governance-hooks": "^0.0.8",
-    "@helium/modular-governance-idls": "0.0.8-next.22+7098baa",
+    "@helium/modular-governance-hooks": "^0.0.13",
+    "@helium/modular-governance-idls": "0.0.13",
     "@helium/onboarding": "4.11.0",
-    "@helium/organization-sdk": "^0.0.8",
+    "@helium/organization-sdk": "^0.0.13",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "3.0.5",
     "@helium/spl-utils": "0.9.2",
-    "@helium/state-controller-sdk": "^0.0.8",
+    "@helium/state-controller-sdk": "^0.0.13",
     "@helium/sus": "0.9.2",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "^0.9.2",
@@ -277,7 +277,7 @@
     "@helium/helium-react-hooks": "^0.9.2",
     "@helium/voter-stake-registry-hooks": "^0.9.2",
     "@helium/voter-stake-registry-sdk": "^0.9.2",
-    "@helium/modular-governance-hooks": "^0.0.8",
+    "@helium/modular-governance-hooks": "^0.0.13",
     "@helium/onboarding": "4.11.0"
   },
   "react-native": {
