--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "android-clean": "cd android && ./gradlew clean && cd ..",
     "ios-clean": "rm -rf ios/Pods && rm -rf ios/build",
     "pod-install": "cd ios && pod install && cd ..",
-    "clean-install": "watchman watch-del-all && rm -rf $TMPDIR/react-native-packager-cache-* && [ -d $TMPDIR/metro-bundler-cache-* ] && rm -rf $TMPDIR/metro-bundler-cache-* || true && rm -rf node_modules/ && yarn cache clean && yarn install && yarn android-clean && yarn ios-clean && yarn pod-install",
+    "clean-install": "react-native-clean-project",
     "bump-patch": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type patch",
     "bump-minor": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type minor",
     "bump-major": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type major",
@@ -260,6 +260,7 @@
     "jest": "^29.6.3",
     "jetifier": "1.6.8",
     "prettier": "2.8.8",
+    "react-native-clean-project": "^4.0.3",
     "react-native-cli-bump-version": "1.5.0",
     "react-native-codegen": "0.0.7",
     "react-native-svg-transformer": "0.14.3",
@@ -272,6 +273,7 @@
   "resolutions": {
     "@types/react": "18",
     "react": "18.2.0",
+    "@solana/wallet-adapter-react": "0.15.33",
     "@helium/account-fetch-cache": "^0.9.2",
     "@helium/account-fetch-cache-hooks": "^0.9.2",
     "@helium/helium-react-hooks": "^0.9.2",
