--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -24,9 +24,6 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
-# Version of flipper SDK to use with React Native
-FLIPPER_VERSION=0.125.0
-
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
@@ -42,3 +39,20 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+# It as advised against updating agp/kotlin version outside of React Native
+# updates: https://github.com/facebook/react-native/issues/36974#issuecomment-1516829016.
+# Update to SDK 34 but supress error message for now as builds will continue
+# to work.
+#
+# WARNING:We recommend using a newer Android Gradle plugin to use compileSdk = 34
+#
+# This Android Gradle plugin (7.4.1) was tested up to compileSdk = 33
+#
+# This warning can be suppressed by adding
+#     android.suppressUnsupportedCompileSdk=34
+# to this project's gradle.properties
+#
+# The build will continue, but you are strongly encouraged to update your project to
+# use a newer Android Gradle Plugin that has been tested with compileSdk = 34
+android.suppressUnsupportedCompileSdk=34
