--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "android-clean": "cd android && ./gradlew clean && cd ..",
     "ios-clean": "rm -rf ios/Pods && rm -rf ios/build",
     "pod-install": "cd ios && pod install && cd ..",
-    "clean-install": "watchman watch-del-all && rm -rf $TMPDIR/react-native-packager-cache-* && rm -rf $TMPDIR/metro-bundler-cache-* && rm -rf node_modules/ && yarn cache clean && yarn install && yarn android-clean && yarn ios-clean && yarn pod-install",
+    "clean-install": "react-native-clean-project",
     "bump-patch": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type patch",
     "bump-minor": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type minor",
     "bump-major": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type major",
@@ -21,6 +21,10 @@
     "gen-types:all": "yarn gen-types",
     "prepare": "husky install"
   },
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "yarn@3.6.4",
   "dependencies": {
     "@babel/preset-typescript": "7.21.0",
     "@bonfida/spl-name-service": "^1.1.1",
@@ -42,14 +46,14 @@
     "@helium/http": "4.7.5",
     "@helium/idls": "0.9.2",
     "@helium/lazy-distributor-sdk": "^0.9.2",
-    "@helium/modular-governance-hooks": "^0.0.8",
-    "@helium/modular-governance-idls": "0.0.8-next.22+7098baa",
+    "@helium/modular-governance-hooks": "^0.0.13",
+    "@helium/modular-governance-idls": "0.0.13",
     "@helium/onboarding": "4.11.0",
-    "@helium/organization-sdk": "^0.0.8",
+    "@helium/organization-sdk": "^0.0.13",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "3.0.5",
     "@helium/spl-utils": "0.9.2",
-    "@helium/state-controller-sdk": "^0.0.8",
+    "@helium/state-controller-sdk": "^0.0.13",
     "@helium/sus": "0.9.2",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "^0.9.2",
@@ -61,13 +65,13 @@
     "@ledgerhq/react-native-hid": "6.30.0",
     "@ledgerhq/react-native-hw-transport-ble": "6.29.5",
     "@ledgerhq/types-devices": "^6.22.4",
-    "@maplibre/maplibre-react-native": "^10.0.0-alpha.2",
+    "@maplibre/maplibre-react-native": "^9.1.0",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@metaplex-foundation/mpl-token-metadata": "2.10.0",
     "@onsol/tldparser": "^0.5.3",
     "@react-native-async-storage/async-storage": "1.18.1",
     "@react-native-community/blur": "4.3.0",
-    "@react-native-community/checkbox": "0.5.15",
+    "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
     "@react-native-community/netinfo": "9.3.7",
@@ -118,17 +122,16 @@
     "domain-browser": "1.2.0",
     "ed25519-hd-key": "^1.3.0",
     "events": "3.3.0",
-    "expo": "48.0.15",
-    "expo-asset": "8.9.1",
-    "expo-barcode-scanner": "12.3.2",
-    "expo-camera": "13.2.1",
-    "expo-constants": "14.2.1",
-    "expo-haptics": "12.2.1",
-    "expo-linking": "4.0.1",
-    "expo-local-authentication": "13.3.0",
-    "expo-permissions": "14.1.1",
-    "expo-secure-store": "12.1.1",
-    "expo-splash-screen": "0.18.2",
+    "expo": "51.0.24",
+    "expo-asset": "10.0.10",
+    "expo-barcode-scanner": "13.0.1",
+    "expo-camera": "15.0.14",
+    "expo-constants": "16.0.2",
+    "expo-haptics": "13.0.1",
+    "expo-linking": "6.3.1",
+    "expo-local-authentication": "14.0.1",
+    "expo-secure-store": "13.0.2",
+    "expo-splash-screen": "0.27.5",
     "fuse.js": "6.6.2",
     "h3-js": "4.1.0",
     "https-browserify": "0.0.1",
@@ -138,6 +141,7 @@
     "lottie-ios": "^4.4.1",
     "lottie-react-native": "^6.7.0",
     "markdown-it": "^13.0.2",
+    "metro-react-native-babel-transformer": "^0.77.0",
     "parse5": "6.0.1",
     "patch-package": "^8.0.0",
     "path-browserify": "0.0.0",
@@ -149,16 +153,15 @@
     "react-async-hook": "^4.0.0",
     "react-error-boundary": "^4.0.13",
     "react-i18next": "11.18.4",
-    "react-native": "0.71.5",
+    "react-native": "0.74.5",
     "react-native-appstate-hook": "1.0.6",
     "react-native-ble-plx": "2.0.3",
     "react-native-charts-wrapper": "0.5.10",
     "react-native-config": "1.4.6",
     "react-native-crypto": "2.2.0",
-    "react-native-currency-format": "1.0.19",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-gesture-handler": "2.9.0",
+    "react-native-gesture-handler": "2.18.1",
     "react-native-get-random-values": "1.8.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
@@ -168,22 +171,22 @@
     "react-native-localize": "2.2.3",
     "react-native-mail": "6.1.1",
     "react-native-markdown-display": "^7.0.0-alpha.2",
-    "react-native-navigation-bar-color": "2.0.1",
+    "react-native-navigation-bar-color": "2.0.2",
     "react-native-network-info": "5.2.1",
-    "react-native-onesignal": "4.4.1",
-    "react-native-os": "1.2.6",
+    "react-native-onesignal": "5.2.2",
+    "react-native-os": "^1.2.6",
     "react-native-pager-view": "6.1.2",
     "react-native-permissions": "^3.9.0",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "3.20.0",
+    "react-native-reanimated": "3.14.0",
+    "react-native-safe-area-context": "4.10.8",
+    "react-native-screens": "3.34.0",
     "react-native-share": "7.9.0",
-    "react-native-shared-group-preferences": "1.1.23",
+    "react-native-shared-group-preferences": "1.1.24",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-sodium": "0.4.0",
+    "react-native-sodium": "^0.4.0",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "3.3.4",
     "react-native-tcp": "3.3.2",
@@ -192,11 +195,11 @@
     "react-native-udp": "2.7.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-video": "5.2.1",
-    "react-native-webview": "12.0.2",
+    "react-native-webview": "13.10.5",
     "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
     "redux-persist": "6.0.0",
-    "rn-swipe-button": "1.3.7",
+    "rn-swipe-button": "1.3.8",
     "rxjs": "7.5.6",
     "semver": "7.3.8",
     "snakecase-keys": "5.4.2",
@@ -217,16 +220,19 @@
     "@babel/preset-env": "7.20.2",
     "@babel/runtime": "7.20.13",
     "@ledgerhq/hw-transport-mocker": "6.27.2",
-    "@tsconfig/react-native": "2.0.2",
+    "@react-native/babel-preset": "0.74.87",
+    "@react-native/eslint-config": "0.74.87",
+    "@react-native/metro-config": "0.74.87",
+    "@react-native/typescript-config": "0.74.87",
     "@types/bn.js": "5.1.1",
     "@types/debounce": "^1.2.4",
     "@types/i18n-js": "3.8.2",
-    "@types/jest": "26.0.24",
     "@types/lodash": "4.14.183",
     "@types/mapbox__geo-viewport": "^0.5.3",
     "@types/markdown-it": "^13.0.5",
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
+    "@types/react": "^18.2.6",
     "@types/react-native": "0.70.6",
     "@types/react-native-charts-wrapper": "0.5.2",
     "@types/react-native-shared-group-preferences": "1.1.1",
@@ -237,7 +243,7 @@
     "@types/tinycolor2": "1.4.3",
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
-    "babel-jest": "26.6.3",
+    "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "4.1.0",
     "babel-plugin-transform-remove-console": "6.9.4",
     "eslint": "7.32.0",
@@ -251,10 +257,10 @@
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "7.0.4",
-    "jest": "29.2.1",
+    "jest": "^29.6.3",
     "jetifier": "1.6.8",
-    "metro-react-native-babel-preset": "0.66.2",
-    "prettier": "2.7.1",
+    "prettier": "2.8.8",
+    "react-native-clean-project": "^4.0.3",
     "react-native-cli-bump-version": "1.5.0",
     "react-native-codegen": "0.0.7",
     "react-native-svg-transformer": "0.14.3",
@@ -262,28 +268,19 @@
     "reactotron-react-native": "5.0.3",
     "reactotron-redux": "3.1.3",
     "rn-nodeify": "10.3.0",
-    "typescript": "4.9.4"
+    "typescript": "5.0.4"
   },
   "resolutions": {
-    "@types/react": "17",
+    "@types/react": "18",
+    "react": "18.2.0",
+    "@solana/wallet-adapter-react": "0.15.33",
     "@helium/account-fetch-cache": "^0.9.2",
     "@helium/account-fetch-cache-hooks": "^0.9.2",
     "@helium/helium-react-hooks": "^0.9.2",
     "@helium/voter-stake-registry-hooks": "^0.9.2",
     "@helium/voter-stake-registry-sdk": "^0.9.2",
-    "@helium/modular-governance-hooks": "^0.0.8",
+    "@helium/modular-governance-hooks": "^0.0.13",
     "@helium/onboarding": "4.11.0"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
   },
   "react-native": {
     "zlib": "browserify-zlib",
@@ -295,7 +292,6 @@
     "domain": "domain-browser",
     "http": "@tradle/react-native-http",
     "https": "https-browserify",
-    "os": "react-native-os",
     "path": "path-browserify",
     "querystring": "querystring-es3",
     "fs": "react-native-level-fs",
@@ -309,7 +305,8 @@
     "timers": "timers-browserify",
     "tty": "tty-browserify",
     "vm": "vm-browserify",
-    "tls": false
+    "tls": false,
+    "os": "react-native-os"
   },
   "browser": {
     "_stream_duplex": "readable-stream/duplex",
