Rebase and address comments

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@metaplex-foundation/js": "^0.19.5",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@metaplex-foundation/mpl-token-metadata": "2.10.0",
+    "@ngraveio/bc-ur": "^1.1.13",
     "@novalabsxyz/mobile-theme": "2.0.0-y.25",
     "@onsol/tldparser": "^0.5.3",
     "@react-native-async-storage/async-storage": "1.18.1",
