Add new splash screen

--- a/package.json
+++ b/package.json
@@ -144,7 +144,6 @@
     "expo-local-authentication": "14.0.1",
     "expo-location": "^17.0.1",
     "expo-secure-store": "13.0.2",
-    "expo-splash-screen": "0.27.5",
     "fuse.js": "6.6.2",
     "geolib": "^3.3.4",
     "h3-js": "4.1.0",
@@ -171,6 +170,7 @@
     "react-native-animated-numbers": "^0.6.2",
     "react-native-appstate-hook": "1.0.6",
     "react-native-ble-plx": "2.0.3",
+    "react-native-bootsplash": "^6.3.2",
     "react-native-charts-wrapper": "0.5.10",
     "react-native-compass-heading": "^1.5.0",
     "react-native-confetti-cannon": "^1.5.2",
