--- a/package.json
+++ b/package.json
@@ -78,22 +78,22 @@
     "@ngraveio/bc-ur": "^1.1.13",
     "@novalabsxyz/mobile-theme": "2.0.0-y.26",
     "@onsol/tldparser": "^0.5.3",
-    "@react-native-async-storage/async-storage": "1.18.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/blur": "4.3.0",
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
     "@react-native-community/netinfo": "9.3.7",
     "@react-native-community/slider": "^4.5.2",
-    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "6.4.0",
     "@react-navigation/material-top-tabs": "6.5.1",
     "@react-navigation/native": "6.0.11",
     "@react-navigation/native-stack": "6.7.0",
     "@react-navigation/stack": "6.2.2",
     "@reduxjs/toolkit": "1.9.1",
-    "@rnmapbox/maps": "^10.1.31",
-    "@shopify/react-native-skia": "^1.5.10",
+    "@rnmapbox/maps": "10.1.33",
+    "@shopify/react-native-skia": "1.5.10",
     "@shopify/restyle": "2.4.2",
     "@solana/spl-account-compression": "0.1.4",
     "@solana/spl-memo": "0.2.3",
@@ -134,10 +134,10 @@
     "domain-browser": "1.2.0",
     "ed25519-hd-key": "^1.3.0",
     "events": "3.3.0",
-    "expo": "51.0.24",
+    "expo": "51.0.39",
     "expo-asset": "10.0.10",
     "expo-barcode-scanner": "13.0.1",
-    "expo-camera": "15.0.14",
+    "expo-camera": "15.0.16",
     "expo-constants": "16.0.2",
     "expo-haptics": "13.0.1",
     "expo-linking": "6.3.1",
@@ -180,7 +180,7 @@
     "react-native-flash-message": "0.2.1",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "2.18.1",
-    "react-native-get-random-values": "1.8.0",
+    "react-native-get-random-values": "1.11.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
@@ -193,7 +193,7 @@
     "react-native-network-info": "5.2.1",
     "react-native-onesignal": "5.2.2",
     "react-native-os": "^1.2.6",
-    "react-native-pager-view": "6.1.2",
+    "react-native-pager-view": "6.3.0",
     "react-native-permissions": "^3.9.0",
     "react-native-qrcode-svg": "^6.3.2",
     "react-native-randombytes": "3.6.1",
@@ -236,7 +236,7 @@
     "vm-browserify": "0.0.4"
   },
   "devDependencies": {
-    "@babel/core": "7.20.12",
+    "@babel/core": "7.24.0",
     "@babel/preset-env": "7.20.2",
     "@babel/runtime": "7.20.13",
     "@ledgerhq/hw-transport-mocker": "6.27.2",
@@ -252,7 +252,7 @@
     "@types/markdown-it": "^13.0.5",
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
-    "@types/react": "^18.2.6",
+    "@types/react": "18.2.79",
     "@types/react-native": "0.70.6",
     "@types/react-native-charts-wrapper": "0.5.2",
     "@types/react-native-shared-group-preferences": "1.1.1",
@@ -288,7 +288,7 @@
     "reactotron-react-native": "5.0.3",
     "reactotron-redux": "3.1.3",
     "rn-nodeify": "10.3.0",
-    "typescript": "5.0.4"
+    "typescript": "5.3.3"
   },
   "resolutions": {
     "@types/react": "18",
